# ashtos

./: .gitignore  Cargo.toml  bin.sh  build.rs  link.ld  link.ld.tmpl
.cargo/: config
fw/: build.rs  sim.sh
fw/.cargo/: config
fw/src/: constants.rs.tmpl  main.rs  sync.rs
src/: constants.rs.tmpl  go.asm.tmpl  local_alloc.rs  main.rs  sync.rs
