[package]
name = "ashtos"
version = "0.1.0"
authors = ["ashtneoi <ashtneoi@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-wg = { version = "0.7.0", default-features = false }
dtb = "0.2.0"
riscv = "0.5.4"
xmas-elf = "0.7.0"

[build-dependencies]
dtb = "0.2.0"
mint-template-engine = "1.2.0-rc.2"
